--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Card</title>
+  <title>Random User</title>
   <link rel="stylesheet" href="./index.css">
   <script type="module" src="./index.js"></script>
 </head>
 
 <body>
   <div class="container">
-
+    <!-- //? aqui va nuestra card -->
   </div>
 </body>
 
